<resources>
    <string name="app_name">Kotlin Report</string>

    <string name="activity_user_create_title">Thêm mới user</string>
    <string name="activity_user_update_title">Cập nhật user</string>

    <string name="hint_user_name">Họ tên*</string>
    <string name="hint_user_sex">Giới tính*</string>
    <string name="hint_male">Nam</string>
    <string name="hint_female">Nữ</string>
    <string name="hint_user_avatar">Ảnh đại diện</string>

    <string name="btn_user_create">Thêm mới</string>
    <string name="btn_user_update">Cập nhật</string>
    <string name="btn_choose_image">Chụp ảnh</string>

    <string name="message_input_required">Bắt buộc nhập</string>
    <string name="message_radio_required">Bắt buộc chọn</string>

    <string name="title_activity_main">Danh sách user</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kotlin Demo</string>
    <string name="nav_header_subtitle">demo....</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_create">Thêm mới user</string>
    <string name="menu_fake_data">Test: +10 user</string>
    <string name="menu_clear_data">Test: Clear all user data</string>

</resources>
