<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.update.UpdateActivity">

    <TextView
        android:id="@+id/textViewErrorCommon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/colorError"
        android:text="Error"
        android:textColor="#ffff"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewUserUpdateId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Id: "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewErrorCommon" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUserUpdateName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserUpdateId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietUserUpdateName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_user_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_user_sex"
        app:layout_constraintBottom_toBottomOf="@+id/rgUserUpdateSex"
        app:layout_constraintStart_toStartOf="@+id/tilUserUpdateName"
        app:layout_constraintTop_toBottomOf="@+id/tilUserUpdateName" />

    <RadioGroup
        android:id="@+id/rgUserUpdateSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/tilUserUpdateName">

        <RadioButton
            android:id="@+id/rbUserUpdateMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/hint_male" />

        <RadioButton
            android:id="@+id/rbUserUpdateFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_female" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewErrorUserUpdateSex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorError"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rgUserUpdateSex"
        app:layout_constraintTop_toBottomOf="@+id/rgUserUpdateSex"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/textViewUserUpdateAvatarLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_user_avatar"
        app:layout_constraintBottom_toBottomOf="@+id/cardViewUserUpdateAvatar"
        app:layout_constraintStart_toStartOf="@+id/textView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewUserUpdateAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:innerRadius="0dp"
        android:shape="ring"
        app:cardCornerRadius="25dp"
        app:layout_constraintStart_toEndOf="@+id/textViewUserUpdateAvatarLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewErrorUserUpdateSex">

        <ImageView
            android:id="@+id/imageViewUserUpdateAvatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_man"
            tools:ignore="VectorDrawableCompat" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonUserUpdateChooseAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:fabSize="mini"
        android:clickable="true"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="@+id/cardViewUserUpdateAvatar"
        app:layout_constraintStart_toEndOf="@+id/cardViewUserUpdateAvatar"
        app:srcCompat="@drawable/ic_menu_camera" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="textViewUserUpdateAvatarLabel,cardViewUserUpdateAvatar,buttonUserUpdateChooseAvatar" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/buttonUserUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_user_update"
        app:icon="@drawable/ic_save_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUserUpdateChooseAvatar" />

</androidx.constraintlayout.widget.ConstraintLayout>